@@ -1,7 +1,7 @@
 ############################################################################
-# configs/sim/ostest/Make.defs
+# configs/sim/cxxtest/Make.defs
 #
-#   Copyright (C) 2007-2008, 2011-2012 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2012 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -45,7 +45,7 @@ else
 endif
 
 ARCHCPUFLAGS		= -fno-builtin
-ARCHCPUFLAGSXX		= -fno-builtin -fno-exceptions -fno-rtti
+ARCHCPUFLAGSXX		= -fno-builtin
 ARCHPICFLAGS		= -fpic
 ARCHWARNINGS		= -Wall -Wstrict-prototypes -Wshadow
 ARCHWARNINGSXX		= -Wall -Wshadow
