@@ -137,7 +137,7 @@ CONFIG_SDCLONE_DISABLE=y
 # CONFIG_SCHED_WAITPID is not set
 # CONFIG_SCHED_ATEXIT is not set
 # CONFIG_SCHED_ONEXIT is not set
-CONFIG_USER_ENTRYPOINT="ostest_main"
+CONFIG_USER_ENTRYPOINT="cxxtest_main"
 CONFIG_DISABLE_OS_API=y
 # CONFIG_DISABLE_CLOCK is not set
 # CONFIG_DISABLE_POSIX_TIMERS is not set
@@ -275,7 +275,7 @@ CONFIG_ARCH_LOWPUTC=y
 CONFIG_LIB_SENDFILE_BUFSIZE=512
 # CONFIG_ARCH_ROMGETC is not set
 # CONFIG_ARCH_OPTIMIZED_FUNCTIONS is not set
-# CONFIG_HAVE_CXX is not set
+CONFIG_HAVE_CXX=y
 # CONFIG_HAVE_CXXINITIALIZE is not set
 # CONFIG_CXX_NEWLONG is not set
 
@@ -295,6 +295,7 @@ CONFIG_LIB_SENDFILE_BUFSIZE=512
 # CONFIG_EXAMPLES_CAN is not set
 # CONFIG_EXAMPLES_CDCACM is not set
 # CONFIG_EXAMPLES_COMPOSITE is not set
+CONFIG_EXAMPLES_CXXTEST=y
 # CONFIG_EXAMPLES_DHCPD is not set
 # CONFIG_EXAMPLES_ELF is not set
 # CONFIG_EXAMPLES_FTPC is not set
@@ -319,11 +320,7 @@ CONFIG_LIB_SENDFILE_BUFSIZE=512
 # CONFIG_EXAMPLES_NXIMAGE is not set
 # CONFIG_EXAMPLES_NXLINES is not set
 # CONFIG_EXAMPLES_NXTEXT is not set
-CONFIG_EXAMPLES_OSTEST=y
-# CONFIG_EXAMPLES_OSTEST_BUILTIN is not set
-CONFIG_EXAMPLES_OSTEST_LOOPS=100
-CONFIG_EXAMPLES_OSTEST_STACKSIZE=8192
-CONFIG_EXAMPLES_OSTEST_NBARRIER_THREADS=8
+# CONFIG_EXAMPLES_OSTEST is not set
 # CONFIG_EXAMPLES_PASHELLO is not set
 # CONFIG_EXAMPLES_PIPE is not set
 # CONFIG_EXAMPLES_POLL is not set
